feat: quick access menu on ctrl + :

--- a/selector.html
+++ b/selector.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="selector.css">
 </head>
 <body style="background-color: #1f1f1f; color: #ffffff; margin: 0;">
-    <div style="display: flex; justify-content: center; align-items: center; height: 10vh;">
+    <div style="display: flex; justify-content: center; align-items: center; height: 10%;">
         <input style="width: 95%" id="emote-search" placeholder="Search emotes...">
     </div>
-    <div style="height: 60vh;" class="unscroll">
+    <div style="height: 60%;" class="unscroll">
         <div id="emote-list" style="display: flex; flex-wrap: wrap;">
 
         </div>
     </div>
-    <div style="height: 30vh; background-color: #282828;">
+    <div style="height: 30%; background-color: #282828;">
         <div style="display: flex;">
             <div id="emote-preview" style="background-image: url(''); background-repeat: no-repeat; background-position: center; width: 48px; height: 48px;"></div>
             <div>
